agrego esquema del formulario en html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,14 @@
     </article>
   </section>
 
-  <section>contacto</section>
+  <section>contacto
+    <form action="/subscription/">
+      <h3>Ponte en contacto</h3>
+      <label for="text">Email</label>
+      <input type="text" id="text" placeholder="escribe tu email">
+      <button>Enviar</button>
+    </form>
+  </section>
 
   <footer>footer</footer>
 </body>
