agrego carpeta imgs y agrego algunos iconos al index.html

--- a/index.html
+++ b/index.html
@@ -10,29 +10,30 @@
   <header>
     <div>
       <figure>
-        <img src="" alt="Logo de lejo.dev">Logo
+        <img src="./imgs/icons8-user-male.svg" alt="Logo de lejo.dev">Logo lejo.dev
       </figure>
       <nav>
         <ol>
-          <li><a href="">Sobre mí</a></li>
-          <li><a href="">Portafolio</a></li>
-          <li><a href="">Estudios</a></li>
-          <li><a href="">Contacto</a></li>
+          <li><a href="#main-section">Sobre mí</a></li>
+          <li><a href="#portfoliio">Portafolio</a></li>
+          <li><a href="#courses">Estudios</a></li>
+          <li><a href="#contact">Contacto</a></li>
         </ol>
       </nav>
     </div>
 
   </header>
 
-  <section>Sección pricipal
+  <section id="main-section" style="border: solid red;">Sección pricipal
     <h1>¡Hola! Soy Alejandro Perilla, <br/> más conocido como <strong>Lejo</strong>.</h1>
     <h2>Soy desarrollador web</h2>
-    <img src="" alt="" width="500">Hero image
+    <img src="./imgs/pixeltrue-web-design-1.svg" alt="" width="500">Hero image
   </section>
 
-  <section>Sección secundaria
+  <section id="portfolio" style="border: solid green;">Sección secundaria
     <h2>Portafolio</h2>
     <article>
+      <img src="./imgs/icons8-news.svg" alt="">
       <h3>Platzi Video</h3>
       <h6>Stack usado</h6>
       <p><small><strong>Fecha:</strong> 17/08/2020</small></p>
@@ -41,11 +42,11 @@
     </article>
   </section>
 
-  <section>Section: Estudios
+  <section id="courses" style="border: solid purple;">Section: Estudios
     <h2>Certificados obtenidos</h2>
     <article>
       <figure>
-        <img src="" alt="">
+        <img src="./imgs/pixeltrue-study-from-books-1.svg" width="300" alt="">
       </figure>
       <h3>course name</h3>
       <p>Description</p>
@@ -53,7 +54,8 @@
     </article>
   </section>
 
-  <section>contacto
+  <section id="contact" style="border: solid orangered;">contacto
+    <img src="./imgs/icons8-contacts.svg" alt="">
     <form action="/subscription/">
       <h3>Ponte en contacto</h3>
       <label for="text">Email</label>
