--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <link rel="icon" type="image/png" href="">
 </head>
 <body>
-  <header>
+  <header class="header">
     <div>
-      <figure>
+      <figure class="logo">
         <img src="./imgs/icons8-user-male.svg" alt="Logo de lejo.dev">Logo lejo.dev
       </figure>
-      <nav>
+      <nav class="menu">
         <ol>
           <li><a href="#main-section">Sobre mí</a></li>
           <li><a href="#portfoliio">Portafolio</a></li>
@@ -24,46 +24,48 @@
 
   </header>
 
-  <section id="main-section" style="border: solid red;">Sección pricipal
+  <section class="hero" style="border: solid red;">Sección pricipal
     <h1>¡Hola! Soy Alejandro Perilla, <br/> más conocido como <strong>Lejo</strong>.</h1>
     <h2>Soy desarrollador web</h2>
     <img src="./imgs/pixeltrue-web-design-1.svg" alt="" width="500">Hero image
   </section>
 
-  <section id="portfolio" style="border: solid green;">Sección secundaria
+  <section class="portfolio" style="border: solid green;">Sección secundaria
     <h2>Portafolio</h2>
-    <article>
-      <img src="./imgs/icons8-news.svg" alt="">
-      <h3>Platzi Video</h3>
-      <h6>Stack usado</h6>
-      <p><small><strong>Fecha:</strong> 17/08/2020</small></p>
-      <p><small><strong>Mira el proyecto en:</strong>GitHub.com</small> </p>
-      <p>Description <br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </article>
-  </section>
-
-  <section id="courses" style="border: solid purple;">Section: Estudios
-    <h2>Certificados obtenidos</h2>
-    <article>
-      <figure>
-        <img src="./imgs/pixeltrue-study-from-books-1.svg" width="300" alt="">
+    <article class="project">
+      <h3 class="project-title">Platzi Video</h3>
+      <h6 class="project-stack">Stack usado</h6>
+      <p class="project-date"><small><strong>Fecha:</strong> 17/08/2020</small></p>
+      <p class="project-link"><small><strong>Mira el proyecto en:</strong>GitHub.com</small> </p>
+      <p class="project-description">Description <br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <figure class="project-imageContainer">
+        <img class="project-image" src="./imgs/icons8-news.svg" alt="">
       </figure>
-      <h3>course name</h3>
-      <p>Description</p>
-      <a href="">Ver certificado</a>
     </article>
   </section>
 
-  <section id="contact" style="border: solid orangered;">contacto
+  <section class="courses" style="border: solid purple;">Section: Estudios
+    <h2>Certificados obtenidos</h2>
+    <article class="course">
+      <figure class="course-imageContainer">
+        <img class="course-image" src="./imgs/pixeltrue-study-from-books-1.svg" width="300" alt="">
+      </figure>
+      <h3 class="course-title">course name</h3>
+      <p class="course-description">Description</p>
+      <a class="course-link" href="">Ver certificado</a>
+    </article>
+  </section>
+
+  <section class="contact" style="border: solid orangered;">contacto
     <img src="./imgs/icons8-contacts.svg" alt="">
-    <form action="/subscription/">
-      <h3>Ponte en contacto</h3>
+    <form class="form-email" action="/subscription/">
+      <h3 class="form-title">Ponte en contacto</h3>
       <label for="text">Email</label>
       <input type="text" id="text" placeholder="escribe tu email">
       <button>Enviar</button>
     </form>
   </section>
 
-  <footer>footer</footer>
+  <footer class="footer">footer</footer>
 </body>
 </html>
