--- a/index.html
+++ b/index.html
@@ -5,41 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lejo.dev</title>
   <link rel="icon" type="image/png" href="">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto+Slab:wght@400;500;600&display=swap" rel="stylesheet">   
+  <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
   <header class="header">
-    <div>
-      <figure class="logo">
-        <img src="./imgs/icons8-user-male.svg" alt="Logo de lejo.dev">Logo lejo.dev
-      </figure>
-      <nav class="menu">
-        <ol>
-          <li><a href="#main-section">Sobre mí</a></li>
-          <li><a href="#portfoliio">Portafolio</a></li>
-          <li><a href="#courses">Estudios</a></li>
-          <li><a href="#contact">Contacto</a></li>
-        </ol>
-      </nav>
-    </div>
-
+    <figure class="logo">
+      <img src="./imgs/icons8-user-male.svg" alt="Logo de lejo.dev">  
+    </figure>
+    <h1>lejo.dev</h1>
+    <nav class="menu">
+      <ol>
+        <li><a href="#main-section">Sobre mí</a></li>
+        <li><a href="#portfoliio">Portafolio</a></li>
+        <li><a href="#courses">Estudios</a></li>
+        <li><a href="#contact">Contacto</a></li>
+      </ol>
+    </nav>
   </header>
 
-  <section class="hero" style="border: solid red;">Sección pricipal
-    <h1>¡Hola! Soy Alejandro Perilla, <br/> más conocido como <strong>Lejo</strong>.</h1>
-    <h2>Soy desarrollador web</h2>
-    <img src="./imgs/pixeltrue-web-design-1.svg" alt="" width="500">Hero image
+  <section class="hero" style="border: solid red;">
+    <h1>¡Hola! Soy Alejandro Perilla, <br/> más conocido como <strong>Lejo</strong>. </br>Soy desarrollador web</h1>
+    <!-- <img src="./imgs/alejo.jpg" alt="" width="500">Hero image -->
   </section>
 
-  <section class="portfolio" style="border: solid green;">Sección secundaria
+  <section class="portfolio">Sección secundaria
     <h2>Portafolio</h2>
     <article class="project">
-      <h3 class="project-title">Platzi Video</h3>
-      <h6 class="project-stack">Stack usado</h6>
-      <p class="project-date"><small><strong>Fecha:</strong> 17/08/2020</small></p>
-      <p class="project-link"><small><strong>Mira el proyecto en:</strong>GitHub.com</small> </p>
-      <p class="project-description">Description <br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="project-details">
+        <h3 class="project-title">Platzi Video</h3>
+        <h6 class="project-stack">Stack usado</h6>
+        <p class="project-date"><small><strong>Fecha:</strong> 17/08/2020</small></p>
+        <p class="project-link"><small><strong>Mira el proyecto en:</strong>GitHub.com</small> </p>
+        <p class="project-description">Description <br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+
       <figure class="project-imageContainer">
-        <img class="project-image" src="./imgs/icons8-news.svg" alt="">
+        <img class="project-image" src="./imgs/pixeltrue-web-design-1.svg" alt="" width="300">
       </figure>
     </article>
   </section>
@@ -66,6 +68,14 @@
     </form>
   </section>
 
-  <footer class="footer">footer</footer>
+  <footer class="footer">
+    <div>
+      <img src="./imgs/icons8-checkmark.svg" alt="" width="60px">
+      <p>Página creada en el curso de desarrollo web 2020</p>
+    </div>
+    <div>
+      <p>Designed by lejo.dev</p>
+    </div>
+  </footer>
 </body>
 </html>
