--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <header class="header">
     <figure class="logo">
       <img src="./imgs/icons8-user-male.svg" alt="Logo de lejo.dev">  
+      <h1>lejo.dev</h1>
     </figure>
-    <h1>lejo.dev</h1>
     <nav class="menu">
       <ol>
         <li><a href="#main-section">Sobre mí</a></li>
@@ -26,7 +26,7 @@
 
   <section class="hero" style="border: solid red;">
     <h1>¡Hola! Soy Alejandro Perilla, <br/> más conocido como <strong>Lejo</strong>. </br>Soy desarrollador web</h1>
-    <!-- <img src="./imgs/alejo.jpg" alt="" width="500">Hero image -->
+    <img src="./imgs/alejo.jpg" alt="" width="500">
   </section>
 
   <section class="portfolio">Sección secundaria
