listo diseño inicial de hero, proyectos y cursos

--- a/index.html
+++ b/index.html
@@ -24,37 +24,97 @@
     </nav>
   </header>
 
-  <section class="hero" style="border: solid red;">
-    <h1>¡Hola! Soy Alejandro Perilla, <br/> más conocido como <strong>Lejo</strong>. </br>Soy desarrollador web</h1>
+  <section class="hero">
+    <h1>¡Hola! Soy Alejandro Perilla, <br/> más conocido como <strong>Lejo</strong>. </br>Soy desarrollador web.</h1>
     <img src="./imgs/alejo.jpg" alt="" width="500">
   </section>
 
-  <section class="portfolio">Sección secundaria
-    <h2>Portafolio</h2>
+  <section class="portfolio">
+    <h2>Portafolio (proyectos destacados)</h2>
     <article class="project">
       <div class="project-details">
         <h3 class="project-title">Platzi Video</h3>
-        <h6 class="project-stack">Stack usado</h6>
+        <h6 class="project-stack">HTML / CSS</h6>
         <p class="project-date"><small><strong>Fecha:</strong> 17/08/2020</small></p>
-        <p class="project-link"><small><strong>Mira el proyecto en:</strong>GitHub.com</small> </p>
-        <p class="project-description">Description <br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="project-link"><small><strong>Mira el proyecto en: </strong>Lejo.dev</small> </p>
+        <p class="project-description">Description <br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
       </div>
 
       <figure class="project-imageContainer">
-        <img class="project-image" src="./imgs/pixeltrue-web-design-1.svg" alt="" width="300">
+        <img class="project-image" src="./imgs/pixeltrue-web-design-1.svg" alt="">
+      </figure>
+    </article>
+
+    <article class="project">
+      <div class="project-details">
+        <h3 class="project-title">Platzi Video</h3>
+        <h6 class="project-stack">HTML / CSS</h6>
+        <p class="project-date"><small><strong>Fecha:</strong> 17/08/2020</small></p>
+        <p class="project-link"><small><strong>Mira el proyecto en: </strong>Lejo.dev</small> </p>
+        <p class="project-description">Description <br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      </div>
+
+      <figure class="project-imageContainer">
+        <img class="project-image" src="./imgs/pixeltrue-web-design-1.svg" alt="">
+      </figure>
+    </article>
+
+    <article class="project">
+      <div class="project-details">
+        <h3 class="project-title">Platzi Video</h3>
+        <h6 class="project-stack">HTML / CSS</h6>
+        <p class="project-date"><small><strong>Fecha:</strong> 17/08/2020</small></p>
+        <p class="project-link"><small><strong>Mira el proyecto en: </strong>Lejo.dev</small> </p>
+        <p class="project-description">Description <br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      </div>
+
+      <figure class="project-imageContainer">
+        <img class="project-image" src="./imgs/pixeltrue-web-design-1.svg" alt="">
       </figure>
     </article>
   </section>
 
-  <section class="courses" style="border: solid purple;">Section: Estudios
-    <h2>Certificados obtenidos</h2>
-    <article class="course">
-      <figure class="course-imageContainer">
-        <img class="course-image" src="./imgs/pixeltrue-study-from-books-1.svg" width="300" alt="">
+  <h2>Certificados obtenidos</h2>
+  <section class="courses">
+    <article class="course" >
+      <figure class="course-imageContainer" >
+        <img class="course-image" src="./imgs/pixeltrue-study-from-books-1.svg" width="300" alt="" >
       </figure>
-      <h3 class="course-title">course name</h3>
-      <p class="course-description">Description</p>
-      <a class="course-link" href="">Ver certificado</a>
+      <div class="course-details" >
+        <h3 class="course-title">Course Name</h3>
+        <p class="course-description">El curso más valorado para aprender todo lo necesario para dominar el mundo del desarrollo web. Inicialmente aprenderás HTML y CSS.</p>
+        <a class="course-link" href="">Ver certificado</a>
+      </div>
+    </article>
+    <article class="course" >
+      <figure class="course-imageContainer" >
+        <img class="course-image" src="./imgs/pixeltrue-study-from-books-1.svg" width="300" alt="" >
+      </figure>
+      <div class="course-details" >
+        <h3 class="course-title">Course Name</h3>
+        <p class="course-description">El curso más valorado para aprender todo lo necesario para dominar el mundo del desarrollo web. Inicialmente aprenderás HTML y CSS.</p>
+        <a class="course-link" href="">Ver certificado</a>
+      </div>
+    </article>
+    <article class="course" >
+      <figure class="course-imageContainer" >
+        <img class="course-image" src="./imgs/pixeltrue-study-from-books-1.svg" width="300" alt="" >
+      </figure>
+      <div class="course-details" >
+        <h3 class="course-title">Course Name</h3>
+        <p class="course-description">El curso más valorado para aprender todo lo necesario para dominar el mundo del desarrollo web. Inicialmente aprenderás HTML y CSS.</p>
+        <a class="course-link" href="">Ver certificado</a>
+      </div>
+    </article>
+    <article class="course" >
+      <figure class="course-imageContainer" >
+        <img class="course-image" src="./imgs/pixeltrue-study-from-books-1.svg" width="300" alt="" >
+      </figure>
+      <div class="course-details" >
+        <h3 class="course-title">Course Name</h3>
+        <p class="course-description">El curso más valorado para aprender todo lo necesario para dominar el mundo del desarrollo web. Inicialmente aprenderás HTML y CSS.</p>
+        <a class="course-link" href="">Ver certificado</a>
+      </div>
     </article>
   </section>
 
@@ -74,7 +134,7 @@
       <p>Página creada en el curso de desarrollo web 2020</p>
     </div>
     <div>
-      <p>Designed by lejo.dev</p>
+      <p>Designed by <a href="https://lejo.dev">lejo.dev</a> </p>
     </div>
   </footer>
 </body>
